# polars-dbt-duckdb-dagster

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LEARN.md  README.md  docker-compose.yml  pyproject.toml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: dataset_location.sql
dbt_project/models/f1/marts/: mart_constructor_standings.sql  mart_country_race_summary.sql  mart_driver_standings.sql  schema.yml
dbt_project/models/f1/staging/: sources.yml  stg_drivers.sql  stg_races.sql  stg_results.sql  stg_sprint_results.sql
dbt_project/models/marts/: mart_country_race_summary.sql  mart_driver_standings.sql  schema.yml
dbt_project/models/staging/: sources.yml  stg_drivers.sql  stg_races.sql  stg_results.sql
evidence/: .gitignore  evidence.config.yaml  package-lock.json  package.json
evidence/pages/: index.md
evidence/pages/f1/: constructors.md  countries.md  drivers.md  index.md
evidence/sources/lakehouse/: connection.yaml  mart_constructor_standings.sql  mart_country_race_summary.sql  mart_driver_standings.sql
notebooks/: 01_explore.ipynb
pipelines/: definitions.py
pipelines/assets/: raw.py
pipelines/datasets/: __init__.py
pipelines/datasets/f1/: __init__.py  sources.py
pipelines/stack/: __init__.py  dbt.py  extractors.py  raw_assets.py  specs.py
